--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -142,7 +142,7 @@ download this file [here](http://biocluster.ucr.edu/~tgirke/projects/longevity/c
 ```{r get_cel_type, eval=FALSE}
 celfiles <- list.files("./data/CEL", pattern=".CEL$")
 chiptype <- sapply(celfiles, function(x) affxparser::readCelHeader(paste0("data/CEL/", x))$chiptype)
-saveRDS(chiptype, "./data/chiptype.rds")
+if(FALSE) saveRDS(chiptype, "./data/chiptype.rds") # if(FALSE) protects this line from accidental execution!
 ```
 
 <div align="right">[Back to Table of Contents]()</div>
@@ -150,9 +150,9 @@ saveRDS(chiptype, "./data/chiptype.rds")
 ## Normalization of CEL files
 
 The follwoing processes the CEL files from each chip type separately using the
-MAS5 normalization algorithm. To save time, the processing is parallelized
-with `BiocParallel` to run on 100 CPU cores of a computer cluster with a scheduler (_e.g._
-Torque).
+MAS5 normalization algorithm. To save time, the processing is parallelized with
+`BiocParallel` to run on 100 CPU cores of a computer cluster with a scheduler
+(_e.g._ Torque).
 
 ```{r normalize_chips, eval=FALSE}
 library(BiocParallel); library(BatchJobs); library(affy)
@@ -177,8 +177,8 @@ combineResults(chiptype_dir, rerun=FALSE)
 This deletes intermediate files. Before executing these lines, please make sure that this is what you want.
 
 ```{r cleanup1, eval=FALSE}
-# for(i in seq_along(chiptype_dir)) unlink(list.files(paste0("data/", chiptype_dir[i]), pattern="cellbatch", full.names=TRUE), recursive=TRUE)
-# unlink("data/CEL/") # Deletes downloaded CEL files
+for(i in seq_along(chiptype_dir)) unlink(list.files(paste0("data/", chiptype_dir[i]), pattern="cellbatch", full.names=TRUE), recursive=TRUE)
+unlink("data/CEL/*.CEL") # Deletes downloaded CEL files
 ```
 
 <div align="right">[Back to Table of Contents]()</div>
@@ -187,8 +187,12 @@ This deletes intermediate files. Before executing these lines, please make sure 
 
 ## Generate list of CEL names defining treatment vs. control comparisons
 
+Note: the file `cmap_instances_02.xls` downloaded from CMAP required some 
+cleaning in LibreOffice (Excel would work for this too). After this 
+it was saved as tab delimited txt file.
+
 ```{r cel_file_list, eval=FALSE}
-cmap <- read.delim("./data/cmap_instances_02.txt", check.names=FALSE) # Note: cmap_instances_02.xls converted to txt with LibreOffice
+cmap <- read.delim("./data/cmap_instances_02.txt", check.names=FALSE) 
 # comp_list <- sampleList(cmap, myby="CMP")
 comp_list <- sampleList(cmap, myby="CMP_CELL")
 ```
