--- a/vignettes/bibtex.bib
+++ b/vignettes/bibtex.bib
@@ -22,8 +22,7 @@
   title       = {The transcriptional landscape of age in human peripheral blood},
   author      = "Peters, Marjolein J and Joehanes, Roby and Pilling, Luke C and
                  Schurmann, Claudia and Conneely, Karen N and Powell, Joseph
-                 and Reinmaa, Eva and Sutphin, George L and Zhernakova,
-                 and Johnson, Andrew D",
+                 and Reinmaa, Eva and Sutphin, George L and ..., ... and Johnson, Andrew D",
   journal     = "Nat. Commun.",
   volume      =  6,
   pages       = "8570",
