--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -221,7 +221,9 @@ affyid <- rownames(df1)[rownames(df1) %in% rownames(df2)]; affyid <- affyid[affy
 df <- cbind(df1[affyid,], df2[affyid,], df3[affyid,])
 ```
 
-## DEG analysis with Limma
+<div align="right">[Back to Table of Contents]()</div>
+
+## DEG analysis with `limma`
 
 The analysis of differentially expressed genes (DEGs) is performed with the `limma` package.
 Genes meeting the chosen cutoff criteria are reported as DEGs (below set to FDR of 10% and 
@@ -279,9 +281,10 @@ a <- colSums(degMAsub==0) # Only in query (a)
 b <- colSums(degMA==1) - c # Only in cmap (b)
 j <- c/(c+a+b) # Jaccard similarity 
 r <- sort(j, decreasing=TRUE)
-degOL_PMID26490707 <- data.frame(CMP=names(r), Jaccard_Index=as.numeric(r))
+degOL_PMID26490707_orig <- data.frame(CMP=names(r), Jaccard_Index=as.numeric(r))
 write.table(degOL_PMID26490707, file="./results/degOL_PMID26490707.xls", quote=FALSE, sep="\t", col.names = NA) 
-degOL_PMID26490707[1:20,]
+sum(degOL_PMID26490707[,2] > 0) # Drugs with any overlap
+degOL_PMID26490707[1:20,] # Top 20 scoring drugs
 ```
 
 ## Identify DEG overlaps with Sood et al. [-@Sood2015-pb]
