--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -281,7 +281,7 @@ a <- colSums(degMAsub==0) # Only in query (a)
 b <- colSums(degMA==1) - c # Only in cmap (b)
 j <- c/(c+a+b) # Jaccard similarity 
 r <- sort(j, decreasing=TRUE)
-degOL_PMID26490707 <- data.frame(CMP=names(r), Jaccard_Index=as.numeric(r), longevity_DEG=as.numeric(a[names(r)]), cmap_DEG=as.numeric(b[names(r)]), Intersect=as.numeric(c[names(r)]))
+degOL_PMID26490707 <- data.frame(Compound_Celltype=names(r), Jaccard_Index=as.numeric(r), longevity_DEG=as.numeric(a[names(r)]), cmap_DEG=as.numeric(b[names(r)]), Intersect=as.numeric(c[names(r)]))
 write.table(degOL_PMID26490707, file="./results/degOL_PMID26490707.xls", quote=FALSE, sep="\t", col.names = NA) 
 sum(degOL_PMID26490707[,2] > 0) # Drugs with any overlap
 degOL_PMID26490707[1:20,] # Top 20 scoring drugs
@@ -307,9 +307,10 @@ a <- colSums(degMAsub==0) # Only in query (a)
 b <- colSums(degMA==1) - c # Only in cmap (b)
 j <- c/(c+a+b) # Jaccard similarity 
 r <- sort(j, decreasing=TRUE)
-degOL_PMID26343147 <- data.frame(CMP=names(r), Jaccard_Index=as.numeric(r))
+degOL_PMID26343147 <- data.frame(Compound_Celltype=names(r), Jaccard_Index=as.numeric(r), longevity_DEG=as.numeric(a[names(r)]), cmap_DEG=as.numeric(b[names(r)]), Intersect=as.numeric(c[names(r)]))
 write.table(degOL_PMID26343147, file="./results/degOL_PMID26343147.xls", quote=FALSE, sep="\t", col.names = NA) 
-degOL_PMID26343147[1:20,]
+sum(degOL_PMID26343147[,2] > 0) # Drugs with any overlap
+degOL_PMID26343147[1:20,] # Top 20 scoring drugs
 ```
 
 ## Drugs affecting known longevity genes
