--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -273,7 +273,7 @@ PMID26490707 <- read.delim("./data/PMID26490707_S1.xls", comment="#")
 myAnnot <- readRDS("./results/myAnnot.rds") 
 affyid <- row.names(myAnnot[myAnnot$ENTREZID %in% PMID26490707$"NEW.Entrez.ID",])
 # degMA <- read.delim("./results/degMA.xls", row.names=1, check.names=FALSE)
-degMA <- readRDS("./results/degMA.rds") # Faster then read.delim()
+degMA <- readRDS("./results/degMA.rds") # Faster than read.delim()
 degMA <- degMA[ , !is.na(colSums(degMA))] # Remove columns where DEG analysis was not possible
 degMAsub <- degMA[affyid,]
 c <- colSums(degMAsub==1) # Common in both (c)
@@ -394,7 +394,7 @@ In progress...
 <div align="right">[Back to Table of Contents]()</div>
 
 # Funding
-This project is funded by NIH grant U24AG051129 awarded by the National Intitute of Aging (NIA).
+This project is funded by NIH grant U24AG051129 awarded by the National Intitute on Aging (NIA).
 
 <div align="right">[Back to Table of Contents]()</div>
 
