--- a/vignettes/longevityTools.Rmd
+++ b/vignettes/longevityTools.Rmd
@@ -100,7 +100,7 @@ Currently, this package includes the following analysis workflow vignettes:
 <div align="right">[Back to Table of Contents]()</div>
 
 # Funding
-This project is funded by NIH grant U24AG051129 awarded by the National Intitute of Aging (NIA).
+This project is funded by NIH grant U24AG051129 awarded by the National Intitute on Aging (NIA).
 
 <div align="right">[Back to Table of Contents]()</div>
 
