--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -334,12 +334,16 @@ This addresses one of Dan's questions in one of our conference calls as to which
 expression of the IGF1 or IGF1R genes.
 
 ```{r deg_queries, eval=TRUE}
-affyids <- row.names(myAnnot[myAnnot$SYMBOL %in% c("IGF1", "IGF1R"),])
-degMA <- readRDS("./results/degMA.rds") # Faster than read.delim()
-q <- colSums(degMA[affyids,])
-q <- q[q > 0]
-length(q)
-as.data.frame(rev(sort(q))[1:20])
+genesymbols <- c("IGF1", "IGF1R")
+geneids <- unique(as.character(myAnnot[myAnnot$SYMBOL %in% genesymbols,"ENTREZID"]))
+names(geneids) <- unique(as.character(myAnnot[myAnnot$SYMBOL %in% genesymbols,"SYMBOL"]))
+degMAgene <- readRDS("./results/degMAgene.rds") # Faster than read.delim()
+df <- data.frame(row.names=colnames(degMAgene), check.names=FALSE)
+for(i in seq_along(geneids)) df <- cbind(df, as.numeric(degMAgene[geneids[i],]))
+colnames(df) <- names(geneids)
+df <- df[rowSums(df)>0,]; df <- df[order(rowSums(df), decreasing=TRUE),]
+nrow(df)
+df[1:20,]
 ```
 
 <div align="right">[Back to Table of Contents]()</div>
