--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -350,10 +350,12 @@ and drug treatments.
 affyids2 <- row.names(myAnnot[myAnnot$SYMBOL %in% genesymbols,])
 affyids <- as.character(myAnnot[myAnnot$SYMBOL %in% genesymbols,"SYMBOL"])
 names(affyids) <- affyids2
+cmap <- read.delim("./data/cmap_instances_02.txt", check.names=FALSE) 
 comp_list <- sampleList(cmap, myby="CMP_CELL")
 comp_list <- comp_list[row.names(df)]
 degList <- runLimma(df=mas5df, comp_list, fdr=0.10, foldchange=1, verbose=FALSE, affyid=names(affyids))
 pvalDF <- sapply(unique(affyids), function(x) sapply(rownames(df), function(y) min(degList[[y]][affyids==x,"adj.P.Val"])))
+colnames(pvalDF) <- paste0(colnames(pvalDF), "_FDR")
 df <- cbind(df, pvalDF)
 write.table(df, file="./results/deg_IGF1.xls", quote=FALSE, sep="\t", col.names = NA) 
 ```
