--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -285,21 +285,17 @@ DEG sets from CMAP. Subsequently, the Jaccard index is used as a simple similari
 to sort the drug table. The 20 top scoring drugs are given below and the full
 data set is written to a file named [`degOL_PMID26490707.xls`](http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/results/degOL_PMID26490707.xls).
 
-```{r deg_overlaps_PMID26490707, eval=TRUE}
-PMID26490707 <- read.delim("./data/PMID26490707_S1.xls", comment="#")
+```{r deg_overlaps_PMID26490707, eval=FALSE}
+PMID26490708 <- read.delim("./data/PMID26490707_S1.xls", comment="#")
 myAnnot <- readRDS("./results/myAnnot.rds") 
 geneid <- as.character(PMID26490707$"NEW.Entrez.ID")
 degMAgene <- readRDS("./results/degMAgene.rds") # Faster than read.delim()
 degMAsub <- degMAgene[rownames(degMAgene) %in% geneid,]
-c <- colSums(degMAsub==1) # Common in both (c)
-a <- colSums(degMAsub==0) # Only in query (a)
-b <- colSums(degMAgene==1) - c # Only in cmap (b)
-j <- c/(c+a+b) # Jaccard similarity 
-r <- sort(j, decreasing=TRUE)
-degOL_PMID26490707 <- data.frame(Compound_Celltype=names(r), Jaccard_Index=as.numeric(r), longevity_DEG=as.numeric(a[names(r)]), cmap_DEG=as.numeric(b[names(r)]), Intersect=as.numeric(c[names(r)]))
+source(system.file("extdata", "longevityTools_eDRUG_Fct.R", package="longevityTools"))
+degOL_PMID26490707 <- intersectStats(degMAgene, degMAsub)
 write.table(degOL_PMID26490707, file="./results/degOL_PMID26490707.xls", quote=FALSE, sep="\t", col.names = NA) 
 sum(degOL_PMID26490707[,2] > 0) # Drugs with any overlap
-degOL_PMID26490707[1:20,] # Top 20 scoring drugs
+degOL_PMID26490707[1:20,]
 ```
 
 ## Identify DEG overlaps with Sood et al. [-@Sood2015-pb]
