--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -281,9 +281,11 @@ saveRDS(degMAgene, "./results/degMAgene.rds")
 
 Peters et al. [-@Peters2015-fc] reported 1,497 age-related gene expression signatures. 
 The following computes their intersects with each of the 3,318 drug-responsive 
-DEG sets from CMAP. Subsequently, the Jaccard index is used as a simple similarity metric
-to sort the drug table. The 20 top scoring drugs are given below and the full
-data set is written to a file named [`degOL_PMID26490707.xls`](http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/results/degOL_PMID26490707.xls).
+DEG sets from CMAP. The result includes the Jaccard index is used as a simple similarity 
+metric among gene sets as well as the raw and adjusted p-values based on the hypergeometric 
+distribution expressing how likely it is to observe the observed intersect sizes just by 
+chance. The 20 top scoring drugs are given below and the full data set is written to a file named 
+[`degOL_PMID26490707.xls`](http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/results/degOL_PMID26490707.xls).
 
 ```{r deg_overlaps_PMID26490707, eval=TRUE}
 PMID26490707 <- read.delim("./data/PMID26490707_S1.xls", comment="#")
