--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -299,6 +299,8 @@ sum(degOL_PMID26490707[,2] > 0) # Drugs with any overlap
 degOL_PMID26490707[1:20,]
 ```
 
+<div align="right">[Back to Table of Contents]()</div>
+
 ## Identify DEG overlaps with Sood et al. [-@Sood2015-pb]
 
 Sood et al. [-@Sood2015-pb] reported 150 age-related gene expression signatures. 
