--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -323,6 +323,7 @@ write.table(degOL_PMID26343147, file="./results/degOL_PMID26343147.xls", quote=F
 sum(degOL_PMID26343147[,2] > 0) # Drugs with any overlap
 degOL_PMID26343147[1:20,] # Top 20 scoring drugs
 ```
+<div align="right">[Back to Table of Contents]()</div>
 
 ## Drugs affecting known longevity genes
 
