--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -259,6 +259,8 @@ myAnnot <- data.frame(ACCNUM=sapply(contents(hgu133aACCNUM), paste, collapse=", 
 saveRDS(myAnnot, "./results/myAnnot.rds")
 ```
 
+<div align="right">[Back to Table of Contents]()</div>
+
 ## Transform probe set to gene level data
 
 The `probeset2gene` function translates a binary DEG matrix from the probe level (`row.names` are
@@ -295,7 +297,7 @@ degMAgene <- readRDS("./results/degMAgene.rds") # Faster than read.delim()
 degMAsub <- degMAgene[rownames(degMAgene) %in% geneid,]
 degOL_PMID26490707 <- intersectStats(degMAgene, degMAsub)
 write.table(degOL_PMID26490707, file="./results/degOL_PMID26490707.xls", quote=FALSE, sep="\t", col.names = NA) 
-sum(degOL_PMID26490707[,2] > 0) # Drugs with any overlap
+sum(degOL_PMID26490707[,1] > 0) # Drugs with any overlap
 degOL_PMID26490707[1:20,]
 ```
 
@@ -320,7 +322,7 @@ degMA <- degMA[ , !is.na(colSums(degMA))] # Remove columns where DEG analysis wa
 degMAsub <- degMA[affyid,]
 degOL_PMID26343147 <- intersectStats(degMAgene, degMAsub)
 write.table(degOL_PMID26343147, file="./results/degOL_PMID26343147.xls", quote=FALSE, sep="\t", col.names = NA) 
-sum(degOL_PMID26343147[,2] > 0) # Drugs with any overlap
+sum(degOL_PMID26343147[,1] > 0) # Drugs with any overlap
 degOL_PMID26343147[1:20,] # Top 20 scoring drugs
 ```
 <div align="right">[Back to Table of Contents]()</div>
