--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -281,13 +281,15 @@ saveRDS(degMAgene, "./results/degMAgene.rds")
 
 ## Identify DEG overlaps with Peters et al. [-@Peters2015-fc]
 
-Peters et al. [-@Peters2015-fc] reported 1,497 age-related gene expression signatures. 
-The `intersectStats` function computes their intersects with each of the 3,318 
-drug-responsive DEG sets from CMAP. The result includes the Jaccard index as a simple 
-similarity metric for gene sets as well as the raw and adjusted p-values based on the 
-hypergeometric distribution expressing how likely it is to observe the observed intersect 
-sizes just by chance. The 20 top scoring drugs are given below and the full data set is 
-written to a file named [`degOL_PMID26490707.xls`](http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/results/degOL_PMID26490707.xls).
+Peters et al. [-@Peters2015-fc] reported 1,497 age-related gene expression
+signatures.  The `intersectStats` function computes their intersects with each
+of the 3,318 drug-responsive DEG sets from CMAP. The result includes the
+Jaccard index as a simple similarity metric for gene sets as well as the raw
+and adjusted p-values based on the hypergeometric distribution expressing how
+likely it is to observe the observed intersect sizes just by chance. The
+results for the 20 top scoring drugs are given below and the full data set is
+written to a file named
+[`degOL_PMID26490707.xls`](http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/results/degOL_PMID26490707.xls).
 
 ```{r deg_overlaps_PMID26490707, eval=TRUE}
 PMID26490707 <- read.delim("./data/PMID26490707_S1.xls", comment="#")
@@ -310,7 +312,7 @@ The `intersectStats` function computes their intersects with each of the 3,318
 drug-responsive DEG sets from CMAP. The result includes the Jaccard index as a simple 
 similarity metric for gene sets as well as the raw and adjusted p-values based on the 
 hypergeometric distribution expressing how likely it is to observe the observed intersect 
-sizes just by chance. The 20 top scoring drugs are given below and the full
+sizes just by chance. The results for the 20 top scoring drugs are given below and the full
 data set is written to a file named [`degOL_PMID26343147.xls`](http://biocluster.ucr.edu/~tgirke/projects/longevity/cmap/results/degOL_PMID26343147.xls).
 
 ```{r deg_overlaps_PMID26343147, eval=TRUE}
