--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -130,6 +130,17 @@ getCmapCEL(rerun=FALSE) # Download cmap CEL files. Note, this will take some tim
 
 <div align="right">[Back to Table of Contents]()</div>
 
+## Overiew of CMAP data
+
+The panel of cell lines used by CMAP includes MCF7, ssMCF7, HL60, PC3 and SKMEL5. 
+Each cell type was subjected to the following number of total treatments and number
+of distinct drugs, respectively:
+
+```{r overview_cmap, eval=TRUE}
+cmap <- read.delim("./data/cmap_instances_02.txt", check.names=FALSE) 
+barplot(table(cmap[, "cell2"]))
+```
+
 # Pre-processing of CEL files
 
 ## Determine chip type from CEL files 
