--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -138,7 +138,8 @@ of distinct drugs, respectively:
 
 ```{r overview_cmap, eval=TRUE}
 cmap <- read.delim("./data/cmap_instances_02.txt", check.names=FALSE) 
-barplot(table(cmap[, "cell2"]))
+library(ggplot2)
+qplot(table(cmap[, "cell2"]), geom="bar")
 ```
 
 # Pre-processing of CEL files
