--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -139,7 +139,7 @@ of distinct drugs, respectively:
 ```{r overview_cmap, eval=TRUE}
 cmap <- read.delim("./data/cmap_instances_02.txt", check.names=FALSE) 
 library(ggplot2)
-qplot(table(cmap[, "cell2"]), geom="bar")
+qplot(data.frame(table(cmap[, "cell2"])), geom="bar")
 ```
 
 # Pre-processing of CEL files
