--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -138,8 +138,7 @@ of distinct drugs, respectively:
 
 ```{r overview_cmap, eval=TRUE}
 cmap <- read.delim("./data/cmap_instances_02.txt", check.names=FALSE) 
-library(ggplot2)
-qplot(data.frame(table(cmap[, "cell2"])), geom="bar")
+barplot(table(cmap[, "cell2"]), main="Cell type distribution")
 ```
 
 # Pre-processing of CEL files
