--- a/vignettes/longevityTools_eDRUG.Rmd
+++ b/vignettes/longevityTools_eDRUG.Rmd
@@ -144,9 +144,12 @@ Each cell type was subjected to the following number of total treatments and num
 of distinct drugs, respectively. The total number of drugs used by CMAP is 1,309.
 
 ```{r overview_cmap_drugs, eval=TRUE}
+library(ggplot2)
 cmap <- read.delim("./data/cmap_instances_02.txt", check.names=FALSE) 
-barplot(table(cmap[, "cell2"]), main="Frequency of treatments by cell types")
-barplot(table(cmap[!duplicated(paste0(cmap$cmap_name, cmap$cell2)),"cell2"]), main="Frequency of drugs by cell type")
+df <- data.frame(table(cmap[, "cell2"])); colnames(df) <- c("Cell_type", "Number")
+ggplot(df, aes(Cell_type, Number)) + geom_bar(position="dodge", stat="identity", fill = "cornflowerblue") + ggtitle("Number of treatments by cell types")
+df <- data.frame(table(cmap[!duplicated(paste0(cmap$cmap_name, cmap$cell2)),"cell2"])); colnames(df) <- c("Cell_type", "Number") 
+ggplot(df, aes(Cell_type, Number)) + geom_bar(position="dodge", stat="identity", fill = "cornflowerblue") + ggtitle("Number of drugs by cell types")
 ```
 The number Affymetrix chip used in the experiments is plotted here for each one of
 the three chip types used by CMAP:
